fixed navbar z-index issue

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@ html {
   display: flex;
   justify-content: space-between;
   margin-top: 37px;
+  z-index: 10;
 }
 
 .nav-tab {
